# project-template

./: .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.directory_name}}/: .pre-commit-config.yaml  Makefile  README.md  noxfile.py  pyproject.toml
