[tool.poetry]
name = "{{cookiecutter.directory_name}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author_name}}"]

[tool.poetry.dependencies]
python = "^3.8"
typeguard = "^2.13.3"
ipython = "^8.2.0"
jupyter = "^1.0.0"


[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

###############################################################################
#
#                                 TESTS
#
###############################################################################
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.0"
pytest-randomly = "^3.5.0"

###############################################################################
#
#                                 FIXERS
#
###############################################################################
black = "^22.3.0"
autoflake = "^1.7.7"
isort = "^5.10.1"
vulture = ">=1.0"
docformatter = {extras = ["tomli"], version = "^1.5.1"}

###############################################################################
#
#                                 LINTERS
#
###############################################################################
mypy = "^0.942"
interrogate = "^1.5.0"
flake8 = "^4.0.1"
bandit = "^1.7.0"
ruff = "^0.0.253"
yamllint = "^1.28.0"

###############################################################################
#
#                                 DOCUMENTATION
#
###############################################################################
pdoc3 = "^0.10.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''