[tool.poetry]
name = "{{cookiecutter.directory_name}}"
version = "0.1.0"
description = ""
authors = ["{{cookiecutter.author_name}}"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^8.2.0"
jupyter = "^1.0.0"


[tool.poetry.dev-dependencies]
pre-commit = "*"

###############################################################################
#
#                                 TESTS
#
###############################################################################
pytest = "*"
pytest-cov = "*"
pytest-xdist = "*"
pytest-randomly = "*"
pytest-instafail = "*"
tox = "*"

###############################################################################
#
#                                 FIXERS
#
###############################################################################
black = "*"
isort = "^5.10.1"
docformatter = {extras = ["tomli"], version = "*"}

###############################################################################
#
#                                 LINTERS
#
###############################################################################
mypy = "*"
interrogate = "*"
bandit = "*"
ruff = "*"
yamllint = "*"

###############################################################################
#
#                                 DOCUMENTATION
#
###############################################################################
pdoc3 = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''