[tool.poetry]
name = "{{ cookiecutter.directory_name }}"
version = "0.1.0"
description = ""
authors = ["{{ cookiecutter.author_name }}"]

[tool.poetry.dependencies]
python = "{{ cookiecutter.python_versions }}"
ipython = "^8.2.0"
jupyter = "^1.0.0"


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "*"
nbqa = "*"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-randomly = "*"
pytest-instafail = "*"
pytest-cov = "*"
pytest-mock = "*"
hypothesis = "*"
pytest-xdist = "*"
nox = "*"

[tool.poetry.group.linters]
optional = true

[tool.poetry.group.linters.dependencies]
mypy = "*"
interrogate = "*"
ruff = "*"

[tool.poetry.group.fixers]
optional = true

[tool.poetry.group.fixers.dependencies]
docformatter = "^1.7.5"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pdoc3 = "*"

[tool.ruff]
extend-include = ["*.ipynb"]
fix = true
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # flake8-bandit
    "S"
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

extend-include = ["*.ipynb"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
line-length = 88
docstring-code-format = true

[tool.interrogate]
ignore-init-method = true
fail-under = 90
exclude = ["tests"]

[tool.mypy]
disable_error_code = "import-untyped"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
